# hamtsolo

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  default.nix  flake.nix  hamtsolo.cabal  hamtsolo.nix  pkgs.nix  release.nix  stack.yaml  stack_overlay.nix
app/: Main.hs
nix/: nixpkgs.json  nixpkgs.nix  sources.json
src/: HamtSolo.hs
