name:                hamtsolo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tfc/hamtsolo#readme
license:             BSD3
license-file:        LICENSE
author:              Jacek Galowicz 
maintainer:          jacek@galowicz.de
copyright:           2017 Jacek Galowicz
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hamtsolo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       async
                     , base
                     , binary
                     , bytestring
                     , hamtsolo
                     , conduit-combinators
                     , conduit-extra
                     , network-conduit
                     , word8
  default-language:    Haskell2010

test-suite hamtsolo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hamtsolo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hamtsolo
