name:                hamtsolo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tfc/hamtsolo#readme
license:             BSD3
license-file:        LICENSE
author:              Jacek Galowicz 
maintainer:          jacek@galowicz.de
copyright:           2017 Jacek Galowicz
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hamtsolo
  hs-source-dirs:      src
  main-is:             HamtSolo.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       async
                     , base
                     , binary
                     , bytestring
                     , conduit-combinators
                     , conduit-extra
                     , network-conduit
                     , word8
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tfc/hamtsolo
